--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@ngx-translate/core": "^15.0.0",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-alpha.23",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
